[gd_scene load_steps=14 format=3 uid="uid://fq8y23pl3rwf"]

[ext_resource type="Script" uid="uid://djywd3u742s1r" path="res://GameStarter/create_page.gd" id="1_5iowa"]
[ext_resource type="Texture2D" uid="uid://cavhbnn0b3qoj" path="res://assets/ui/background.png" id="2_ssd5f"]
[ext_resource type="Texture2D" uid="uid://buk34li2ffbo0" path="res://assets/ui/BackIcon.png" id="3_jap0u"]
[ext_resource type="Texture2D" uid="uid://cw203koi7bphl" path="res://assets/ui/logo.png" id="3_vm0o5"]
[ext_resource type="Texture2D" uid="uid://cp6gvl7q3kwp0" path="res://assets/ui/Text field.png" id="4_cwooc"]
[ext_resource type="Texture2D" uid="uid://ckmwq5fbp3g6e" path="res://assets/ui/Divider create page.png" id="5_subxe"]
[ext_resource type="Texture2D" uid="uid://b0qup0knwas1j" path="res://assets/ui/Eye off.png" id="6_nlrc0"]
[ext_resource type="Texture2D" uid="uid://wusfm5iffkwg" path="res://assets/ui/login google.png" id="6_uxr2r"]
[ext_resource type="Texture2D" uid="uid://by4gb7jifow7n" path="res://assets/ui/Eye.png" id="7_fy10r"]
[ext_resource type="Script" uid="uid://cf35oj3sh0te1" path="res://GameStarter/animated_hide_2.gd" id="8_nlrc0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dx0t"]
size = Vector2(66, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_av1ic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nlrc0")
}, {
"duration": 1.0,
"texture": ExtResource("7_fy10r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ej5m7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CreatePage" type="Node2D"]
script = ExtResource("1_5iowa")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_ssd5f")

[node name="backicon connection page" type="TextureButton" parent="Background"]
offset_left = -843.0
offset_top = -473.0
offset_right = -769.0
offset_bottom = -399.0
texture_normal = ExtResource("3_jap0u")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(960, 130)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_vm0o5")

[node name="CREATE AN ACCOUNT" type="Label" parent="."]
offset_left = 701.0
offset_top = 270.0
offset_right = 1220.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 50
text = "CREATE AN ACCOUNT"

[node name="ProfileName" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 400.0
offset_right = 1293.0
offset_bottom = 456.0
texture = ExtResource("4_cwooc")

[node name="LabelProfileName" type="LineEdit" parent="ProfileName"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true

[node name="Label" type="Label" parent="ProfileName/LabelProfileName"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "How should we call you ?"

[node name="Email" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 510.0
offset_right = 1293.0
offset_bottom = 566.0
texture = ExtResource("4_cwooc")

[node name="LabelEmail" type="LineEdit" parent="Email"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true

[node name="Label" type="Label" parent="Email/LabelEmail"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "What's your email ?"

[node name="Password" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 620.0
offset_right = 1293.0
offset_bottom = 676.0
texture = ExtResource("4_cwooc")

[node name="LabelPassword" type="LineEdit" parent="Password"]
layout_mode = 0
offset_right = 665.0
offset_bottom = 57.0
theme_override_colors/font_placeholder_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
alignment = 1
flat = true
secret = true

[node name="Label" type="Label" parent="Password/LabelPassword"]
layout_mode = 0
offset_top = -36.0
offset_right = 241.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
text = "Create a password"

[node name="Label2" type="Label" parent="Password/LabelPassword"]
layout_mode = 0
offset_top = 60.0
offset_right = 515.0
offset_bottom = 83.0
text = "Use 8 or more characters with a mix of letters, numbers & symbols"

[node name="HideButton" type="Label" parent="Password/LabelPassword"]
layout_mode = 0
offset_left = 625.0
offset_top = -36.0
offset_right = 665.0
offset_bottom = -13.0
text = "Hide"

[node name="Area2D" type="Area2D" parent="Password/LabelPassword/HideButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Password/LabelPassword/HideButton/Area2D"]
position = Vector2(5, 13)
shape = SubResource("RectangleShape2D_0dx0t")

[node name="AnimatedSprite_hide" type="AnimatedSprite2D" parent="Password/LabelPassword/HideButton/Area2D"]
position = Vector2(-15, 12)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_av1ic")
script = ExtResource("8_nlrc0")

[node name="CreateAccount" type="Button" parent="."]
offset_left = 629.0
offset_top = 720.0
offset_right = 1294.0
offset_bottom = 777.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ej5m7")
text = "Create Account"

[node name="OR and Divider" type="Label" parent="."]
offset_left = 940.0
offset_top = 790.0
offset_right = 983.0
offset_bottom = 832.0
theme_override_font_sizes/font_size = 30
text = "OR"

[node name="DividerLeft" type="Sprite2D" parent="OR and Divider"]
position = Vector2(-170.5, 22)
scale = Vector2(0.942177, 1)
texture = ExtResource("5_subxe")

[node name="DividerRight" type="Sprite2D" parent="OR and Divider"]
position = Vector2(214.5, 22)
scale = Vector2(0.942177, 1)
texture = ExtResource("5_subxe")

[node name="GoogleLogin" type="TextureButton" parent="."]
offset_left = 634.0
offset_top = 883.0
offset_right = 1303.0
offset_bottom = 934.0
texture_normal = ExtResource("6_uxr2r")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="Background/backicon connection page" to="." method="_on_backicon_connection_page_pressed"]
[connection signal="input_event" from="Password/LabelPassword/HideButton/Area2D" to="Password/LabelPassword/HideButton/Area2D/AnimatedSprite_hide" method="_on_area_2d_input_event_2"]
[connection signal="pressed" from="CreateAccount" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="GoogleLogin" to="." method="_on_google_login_pressed"]
